cmake_minimum_required(VERSION 3.10)
project(EjerciciosExtras)
set(CMAKE_CXX_STANDARD 17)

add_executable(EjerciciosExtras
        "Introducion/main.cpp"
)

add_executable(Ejerciciosdedatos
        "Ejercicios de Datos I/main.cpp"
)

add_executable(Ejerciciosdearitmetica
        "Ejercicios de Aritmética/main.cpp"

)